--- a/component/slideShow/slide.module.css
+++ b/component/slideShow/slide.module.css
@@ -1,6 +1,5 @@
 .slideContainer {
   position: relative;
-  margin-block: 10rem;
 }
 
 .slide div:not(:last-of-type) {
